--- a/src/styles/pages/List.module.scss
+++ b/src/styles/pages/List.module.scss
@@ -62,6 +62,10 @@
       line-height: 17px;
       border-bottom: 1px solid #ddd;
 
+      td svg {
+        cursor: pointer;
+      }
+
       &:hover {
         color: $green;
       }
