Added Table component and an interface folder

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,15 @@
+// Light Mode
+$background: hsl(0, 0%, 90%);
+$blocks: hsl(0, 0%, 97%);
+
+$title: hsl(0, 0%, 25%);
+$sub-title: hsl(0, 0%, 25%);
+$text: hsl(0, 0%, 25%);
+
+$text-opacity: hsla(0, 0%, 100%, 0.671);
+
 $white: hsl(0, 0%, 100%);
-$semi-white: hsl(220, 13%, 95%);
-$green: hsl(120, 50%, 60%);
+$semi-white: hsl(0, 13%, 95%);
+
 $black: hsl(24, 14%, 7%);
-$orange: hsl(39, 96%, 53%);
+$green: hsl(120, 50%, 60%);
