--- a/src/styles/components/Activities.module.scss
+++ b/src/styles/components/Activities.module.scss
@@ -1,4 +1,5 @@
 @import "../functions.scss";
+@import "../colors.scss";
 
 .activities {
   display: grid;
@@ -15,5 +16,6 @@
     border: 0;
     margin-top: 0.6rem;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 0px 10px 1px;
+    background-color: $white;
   }
 }
