--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -8,7 +8,27 @@
   min-height: 50px;
 
   a {
-    margin: 0 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: 0.5s;
+  }
+
+  button {
+    border: 0;
+  }
+
+  a,
+  button {
+    @include DisplayFlex(row, center, center);
+    @include HeightWidth(50px, 80px);
     color: $black;
+    background-color: $green;
+    transition: 0.5s;
+
+    &:hover {
+      color: $black;
+      text-decoration: none;
+      background-color: hsl(120, 50%, 50%);
+    }
   }
 }
