--- a/src/styles/components/SelectInput.module.scss
+++ b/src/styles/components/SelectInput.module.scss
@@ -9,11 +9,12 @@
   .customSelect {
     cursor: pointer;
     appearance: none;
-    font-size: 1rem;
-    padding: 1rem 1rem 1rem 3.5rem;
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem 0.5rem 3.5rem;
     border: none;
     border-radius: 5px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 10px 0px;
+    background-color: $white;
     outline: 0;
   }
 
