--- a/src/styles/components/TableList.module.scss
+++ b/src/styles/components/TableList.module.scss
@@ -7,7 +7,6 @@
   background-color: $white;
 
   .table {
-    min-width: 500px;
     text-align: left;
     font-family: "Nunito", sans-serif;
     border-collapse: collapse;
@@ -31,27 +30,16 @@
         text-align: left;
         font-weight: bold;
         font-size: 0.9rem;
+        width: auto;
+      }
 
-        &:nth-child(1) {
-          min-width: 180px;
-        }
-        &:nth-child(2) {
-          min-width: 60px;
-        }
-        &:nth-child(3) {
-          min-width: 60px;
-        }
-        &:nth-child(4) {
-          min-width: 60px;
-        }
-        &:nth-child(5) {
-          min-width: 60px;
-        }
-        &:nth-child(6) {
-          min-width: 150px;
-        }
-        &:nth-child(7) {
-          min-width: 150px;
+      .sortTh {
+        @include DisplayFlex(row, center, center);
+        cursor: pointer;
+        background-color: hsl(120, 50%, 50%);
+
+        svg {
+          margin-left: 0.6rem;
         }
       }
     }
@@ -81,7 +69,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 680px) {
   .container {
     margin: 2.5rem;
   }
