--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -2,7 +2,9 @@
 @import "../functions.scss";
 
 .container {
+  height: 100vh;
   padding: 1rem 2rem;
+  background-color: $background;
 
   h1 {
     font-size: 1.5rem;
@@ -15,6 +17,7 @@
     gap: 2rem;
 
     section {
+      background-color: $blocks;
       border-radius: 5px;
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 10px 0px;
 
@@ -24,6 +27,7 @@
         padding: 0.6rem 0rem;
         font-size: 1.2rem;
         letter-spacing: 1px;
+        color: $title;
       }
 
       > div {
@@ -35,6 +39,7 @@
           font-size: 1rem;
           letter-spacing: 1px;
           margin-bottom: 0.6rem;
+          color: $sub-title;
         }
       }
     }
@@ -46,7 +51,6 @@
 
     cursor: pointer;
     border: none;
-    padding: 1.5rem 3rem;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 10px 0px;
     background-color: $white;
     margin-top: 1.2rem;
@@ -54,7 +58,7 @@
     transition: 0.5s;
 
     &:hover {
-      color: white;
+      color: $white;
       background: $green;
     }
   }
